# adv-rag

./: .env.example  .gitignore  CLAUDE.md  FASTMCP_CLOUD_ENV_SETUP.md  LICENSE  MCP_VALIDATION_SUMMARY.md  README.md  claude-md-mcp-guide.md  claude_code_instructions.md  claude_mcp_config.json  docker-compose.yml  fastmcp.json  largest_files_finder.py  mcp.json  mcp_server_official.json  mcp_server_schema.json  mcp_server_stdio.json  project_files.txt  pyproject.toml  pytest.ini  pytest_mcp.ini  requirements.txt  run.py  temp_schema_check.py  verify_mcp.py
.cursor/rules/: SummarizePrototype.mdc  SummarizeRepo.mdc  create-prd.mdc  development-workflow.mdc  fastapi-mcp-integration.mdc  fastmcp-migration-comparison.mdc  file-versioning-protocol.mdc  generate-tasks.mdc  honest-progress-tracking.mdc  langchain-integration-patterns.mdc  mcp-2025-architecture.mdc  mcp-production-deployment.mdc  mcp-server-best-practices.mdc  process-task-list.mdc  project-structure-navigation.mdc  qdrant-code-snippets-rules.mdc  qdrant-semantic-memory-rules.mdc  qdrant-separation-concerns-rules.mdc  rag-development-patterns.mdc  refactoring-prd-enhanced.mdc  security-first-refactoring.mdc  testing.mdc  tier-1-project-core.mdc  tier-2-development-workflow.mdc  tier-3-rag-langchain-patterns.mdc  tier-4-mcp-fastapi-implementation.mdc  tier-5-mcp-schema-tooling.mdc  validation-integrity.mdc  weekly-rule-assessment.mdc
architecture/diagrams/: 02_architecture_diagrams.md
architecture/docs/: 01_component_inventory.md
architecture_20251004_152334/: README.md
architecture_20251004_152334/docs/: 03_data_flows.md  04_api_reference.md
config/: phoenix_integration.env.example
config/environments/: development.env  production.env
data/: .gitkeep
docs/: ARCHITECTURE.md  CACHE_TOGGLE_VALIDATION.md  CLAUDE_CODE_MCP_SETUP.md  CQRS_IMPLEMENTATION_SUMMARY.md  DEPENDENCY_VERSIONS_VALIDATED.md  FASTMCP_CLOUD_DEPLOYMENT.md  FUNCTIONAL_OVERVIEW.md  MCP_COMMAND_LINE_GUIDE.md  MCP_LEARNING_JOURNEY.md  PHOENIX_MCP_VALIDATION_ANALYSIS.md  QUICK_REFERENCE.md  REDIS_MCP_INTEGRATION.md  REFACTORING_SUMMARY.md  RESOURCE_TEMPLATE_ENHANCEMENT.md  ROADMAP.md  SETUP.md  SYSTEM_VALIDATION.md  TRANSPORT_AGNOSTIC_VALIDATION.md  TROUBLESHOOTING.md  cursor-mcp-servers-guide.md  prd-src-reorganization.md  project-structure.md  tasks-prd-src-reorganization.md
docs/archive/: IMPLEMENTATION_ROADMAP.md
legacy/code/: README.md  langchain_eval_experiments.py  (+1 more)
processed/: cache_comparison_exp_20250627_174119.json  cache_comparison_exp_20251004_150748.json  cache_comparison_exp_20251004_162340.json  cache_comparison_exp_20251004_170240.json  semantic_architecture_benchmark.json
scripts/: dev_mcp_fastmcp.sh  dev_mcp_inspector.sh  list_project_files.sh  manage.py  mcp_server.sh  project_extractor.py  project_files.txt  start_mcp_servers.sh  status.py  test_redis_mcp_integration.py
src/: __init__.py  chain_factory.py  data_loader.py  fastapi_to_mcp_converter.py  llm_models.py  logging_config.py  main.py  main_api.py  redis_client.py  retriever_factory.py  settings.py  vectorstore_setup.py
tasks/: prd-mcp-baseline-validation.md  prd-src-reorganization.md  tasks-prd-mcp-baseline-validation.md  tasks-prd-src-reorganization.md
tests/: README.md  README_TESTING.md  __init__.py  conftest.py  test_jsonrpc_transport.py  test_schema_accuracy.py
validation_results/: collections.json  fastapi_health.json  system_status.json
(+143 files in other folders)
