[project]
name = "adv-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere>=0.4.2",
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-dotenv>=0.21.0",
    "mcp[cli]>=1.9.3",
    "fastmcp>=2.0.0",
    "tenacity>=9.0.0",
    "arize-phoenix",
    "arize-phoenix-otel",
    "openinference-instrumentation-langchain",
    "langchain-mcp-adapters",
    "langgraph>=0.4.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

test = [
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.24.0"
]

[project.scripts]
adv-rag-server = "src.mcp_server.main:main"
