[project]
name = "adv-rag"
version = "0.1.0"
description = "Production-ready RAG system with FastAPI→MCP integration, featuring 6 retrieval strategies and zero-duplication architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI and MCP - CURRENT VERSIONS (June 2025)
    "fastapi>=0.115.12", # Current stable version
    "fastmcp>=2.8.0", # Latest version (June 11, 2025)
    "mcp>=1.9.3", # MCP SDK (June 12, 2025)
    "uvicorn[standard]>=0.24.0",
    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    # LangChain ecosystem - EXACT CURRENT VERSIONS
    "langchain>=0.3.25", # Latest stable (May 2, 2025)
    "langchain-core>=0.3.65", # Latest stable (June 10, 2025)
    "langchain-openai>=0.3.23", # Latest stable (June 13, 2025)
    "langchain-community>=0.3.25", # Latest stable (June 10, 2025)
    "langchain-text-splitters>=0.3.8", # Latest stable (Apr 4, 2025)
    "langchain-experimental>=0.3.4", # Latest stable (Dec 20, 2024)
    "langchain-qdrant>=0.2.0",
    "langchain-redis>=0.2.2", # Current version (validated)
    "langchain-cohere>=0.4.0", # Cohere integration
    # Vector stores and search - CURRENT VERSIONS
    "qdrant-client>=1.11.0",
    "redis[hiredis]>=6.2.0", # Current version (validated June 2025)
    "rank-bm25>=0.2.2",
    # Core ML/AI
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "tiktoken>=0.7.0",
    "arize-phoenix>=10.12.0", # Phoenix tracing (current version)
    "arize-phoenix-otel",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation-mcp",
    # Configuration and utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.9.1", # Current version (Apr 18, 2025)
    "python-dotenv>=1.0.0",
    # Data processing
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "claude-agent-sdk>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
line-length = 88
target-version = ['py313']
